# bookshop

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 18c081228db6_product_table.py  bc21ad877201_added_condition_for_cascading_aidetails_.py  eb213b60896e_added_necessary_tables.py
app/: analytics.py  main.py
app/ai/: embeddings.py  llm_summariser.py  recommender.py
app/api/: analytics.py  products.py
app/crud/: product.py
app/ingestion/: constants.py  crawler.py  extractor.py  seed.py
app/ingestion/tests/: test_crawler.py  test_extractor.py
app/models/: db.py  product.py
app/schemas/: product.py
app/schemas/tests/: test_product_related_schemas.py
scripts/: seed-db.sh  start-crawler.sh
tests/: conftest.py  factories.py
tests/test_ai/: test_embedding.py  test_llm_summariser.py  test_recommender.py
tests/test_crud/: test_analytics.py  test_product.py
